--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@prisma/client": "^3.13.0",
     "egg": "^2.6.1",
+    "egg-cors": "^2.2.3",
     "egg-scripts": "^2.6.0",
     "egg-swagger-doc": "^2.3.2",
     "egg-validate": "^2.0.2",
