--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,10 @@
   "extends": "eslint-config-egg/typescript",
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules": {
+    "semi": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/semi": [2, "never"]
   }
 }
