--- a/package.json
+++ b/package.json
@@ -30,19 +30,20 @@
     "egg-validate": "^2.0.2",
     "egg-view-ejs": "^2.0.1",
     "egg-view-nunjucks": "^2.3.0",
-    "typescript": "^4.6.4"
+    "typescript": "4.0.5"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
     "@types/supertest": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.16.0",
-    "eslint": "^6.7.2",
     "eslint-config-egg": "^8.0.0",
+    "eslint-plugin-jsdoc": "^39.2.9",
     "prisma": "^3.13.0",
     "tslib": "^1.9.0"
   },
