--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "egg-exam-service",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -30,6 +30,7 @@
     "egg-validate": "^2.0.2",
     "egg-view-ejs": "^2.0.1",
     "egg-view-nunjucks": "^2.3.0",
+    "joi": "^17.6.0",
     "typescript": "4.0.5"
   },
   "devDependencies": {
