--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   },
   "rules": {
     "semi": "off",
+    "jsdoc/check-tag-names": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/semi": [2, "never"]
   }
