--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "egg-view-ejs": "^2.0.1",
     "egg-view-nunjucks": "^2.3.0",
     "joi": "^17.6.0",
-    "typescript": "4.0.5"
+    "typescript": "^4.7.2"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
