--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "target": "es2017",
-    "module": "commonjs",
+    "module": "Node16",
     "strict": true,
     "noImplicitAny": false,
     "experimentalDecorators": true,
