--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "egg-view-ejs": "^2.0.1",
     "egg-view-nunjucks": "^2.3.0",
     "joi": "^17.6.0",
+    "moment": "^2.29.3",
+    "node-keycloak": "^0.1.4",
     "typescript": "^4.7.2"
   },
   "devDependencies": {
