--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
+    "@types/lodash": "^4.14.182",
     "egg": "^2.6.1",
     "egg-cors": "^2.2.3",
     "egg-scripts": "^2.6.0",
@@ -31,6 +32,7 @@
     "egg-view-ejs": "^2.0.1",
     "egg-view-nunjucks": "^2.3.0",
     "joi": "^17.6.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "node-keycloak": "^0.1.4",
     "typescript": "^4.7.2"
